Implementação de GetPermissionsResources na API Resources.
