# workspace/04.1-ofb.consents/sboot-atom-ofb-resources/src/main/java/com/ofb/resources/model/ResourcesPermissionsAuthorisedModel.java
@@ -12,7 +12,7 @@ import javax.persistence.Table;
 @Data @Builder @ToString @AllArgsConstructor @RequiredArgsConstructor
 public class ResourcesPermissionsAuthorisedModel {
 
-    @Id @Column(name = "CONSENTRESOURCEPERMISSIONID")
+    @Id @Column(name = "ID")
     private String id;
 
     @Column(name = "PERSONALCPF")
@@ -47,6 +47,72 @@ public class ResourcesPermissionsAuthorisedModel {
 
     @Column(name = "PERSONALNAME")
     private String personalName;
+
+    @Column(name = "CPFNUMBER")
+    private String personalCpfNumber;
+
+    @Column(name = "BIRTHDATE")
+    private String personalBirthDate;
+
+    @Column(name = "SEX")
+    private String personalSex;
+
+    @Column(name = "ADDRESS")
+    private String personalAddress;
+
+    @Column(name = "DISTRICTNAME")
+    private String personalDistrictName;
+
+    @Column(name = "TOWNNAME")
+    private String personalTownName;
+
+    @Column(name = "COUNTRYSUBDIVISION")
+    private String personalCountrySubDivision;
+
+    @Column(name = "POSTCODE")
+    private String personalPostCode;
+
+    @Column(name = "COUNTRY")
+    private String personalCountry;
+
+    @Column(name = "PHONETYPE")
+    private String personalPhoneType;
+
+    @Column(name = "PHONEAREACODE")
+    private String personalPhoneAreaCode;
+
+    @Column(name = "PHONENUMBER")
+    private String personalPhoneNumber;
+
+    @Column(name = "EMAIL")
+    private String personalEmail;
+
+    @Column(name = "ACCOUNTTYPE")
+    private String accountType;
+
+    @Column(name = "ACCOUNTSUBTYPE")
+    private String accountSubType;
+
+    @Column(name = "ACCOUNTSTATUS")
+    private String accountStatus;
+
+    @Column(name = "ACCOUNTBRANDNAME")
+    private String accountBrandName;
+
+    @Column(name = "ACCOUNTCOMPANYCNPJ")
+    private String accountCompanyCNPJ;
+
+    @Column(name = "ACCOUNTCOMPECODE")
+    private String accountCompeCode;
+
+    @Column(name = "ACCOUNTBRANCHCODE")
+    private String accountBranchCode;
+
+    @Column(name = "ACCOUNTNUMBER")
+    private String accountNumber;
+
+    @Column(name = "ACCOUNTCHECKDIGIT")
+    private String accountCheckDigit;
 
     @Column(name = "PERMISSIONID")
     private String permissionId;
